Fixed image spacing

--- a/css/main.css
+++ b/css/main.css
@@ -149,7 +149,7 @@ nav ul li .btn:hover {
 	top: 5%;
 	height: 275px;
 	width: 370px;
-	margin: 140px 0px 0px 50px;
+	margin: 160px 20px 0px 50px;
 	display: inline;
 	border-radius: 7px;
 }
